--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Chapter 6</title>
 <script src="jquery.js"></script>
+<script src="accordion.jquery.js"></script>
 <script src="app.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
